--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    cap_\n",
+    "    cap_destinations = []\n",
     "    for x in travel_destinations :\n",
     "        "
    ]
