Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -235,6 +235,7 @@
     "def capitalize_countries():\n",
     "    cap_destinations = []\n",
     "    for x in travel_destinations :\n",
+    "        x.capi\n",
     "        "
    ]
   },
