Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -235,8 +235,8 @@
     "def capitalize_countries():\n",
     "    cap_destinations = []\n",
     "    for x in travel_destinations :\n",
-    "        x.capitalize()\n",
-    "        "
+    "        new = x.capitalize()\n",
+    "        cap"
    ]
   },
   {
