Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -236,7 +236,7 @@
     "    cap_destinations = []\n",
     "    for x in travel_destinations :\n",
     "        new = x.capitalize()\n",
-    "        cap"
+    "        cap_destinations.append(new)"
    ]
   },
   {
