Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -236,7 +236,8 @@
     "    cap_destinations = []\n",
     "    for x in travel_destinations :\n",
     "        new = x.capitalize()\n",
-    "        cap_destinations.append(new)"
+    "        cap_destinations.append(new)\n",
+    "    "
    ]
   },
   {
