Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,7 @@
     "    for x in travel_destinations :\n",
     "        new = x.capitalize()\n",
     "        cap_destinations.append(new)\n",
-    "    "
+    "    return cap_destinations90"
    ]
   },
   {
